--- a/vigenere.html
+++ b/vigenere.html
@@ -73,7 +73,7 @@
 
 	      <div class="col-lg-6">
           <label class="cipher-text" for="output">Output :</label><br>
-          <textarea id="output" class="textarea" readonly></textarea><br><br>></textarea>
+          <textarea id="output" class="textarea" readonly></textarea><br><br></textarea>
 	      </div>
 
 			</div>
